# FINAL-PROJECT

./: .gitignore  app.py  form_extractor.py  form_templates.py  forms.py  gemini_form_extractor.py  guide.txt  main.py  models.py  pyproject.toml  requirements.txt  routes.py
attached_assets/: Pasted-FORM-TEMPLATES-Biodata-Personal-Information-field-Full-1744816211285.txt
static/css/: styles.css
static/js/: export.js  scripts.js
templates/: base.html  dashboard.html  form_upload.html  index.html  login.html  register.html  review_data.html  template_selection.html  view_saved_forms.html
